# MCP-Doc

./: .gitignore  README.md  mypy.ini  pyproject.toml  server.py
src/mcp_doc/: __init__.py  config.py  main.py  processor.py  types.py
src/mcp_doc/tools/: __init__.py  content.py  document.py  layout.py  table.py
