[project]
name = "mcp-doc"
version = "0.1.0"
description = "A Docx document processing service based on the FastMCP library, supporting the creation, editing, and management of Word documents using AI assistants in Cursor"
requires-python = ">=3.10"
dependencies = [
    "python-docx",
    "mcp",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
]

