[project]
name = "mcp-doc"
version = "0.1.0"
description = "A Docx document processing service based on the FastMCP library..."
requires-python = ">=3.10"
# Added fastmcp here so it installs automatically
dependencies = ["python-docx", "mcp", "fastmcp"]

[project.scripts]
mcp-doc = "server:main"

[dependency-groups]
dev = ["mypy>=1.19.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
